# astarte-device-sdk-zephyr

./: .clang-tidy  .gitignore  CHANGELOG.md  README.md  REUSE.toml  get_started.md  run_spdx_tool.sh  skipfile.txt  west-ci-4.2.yml  west-ci-lts.yml  west-ci-msv.yml  west-ci-reference.yml  west-ci.yml  west-e2e.yml  west.yml
.github/workflows/: build.yml  doc-build.yml  doc-check.yml  doc-generation.yml  e2e-test.yaml  orchestrator.yml  reuse-lint.yml  static.yml  test.yml  unit.yml
.reuse/: dep5
LICENSES/: MIT.txt
doc/: CMakeLists.txt  Makefile  astarte-device-sdk.doxyfile.in  astarte-device-sdk.extended.doxyfile.in  library.doxyfile.in  library.extended.doxyfile.in
doc/_doxygen/: doxygen-awesome-zephyr.css  doxygen-awesome-zephyr.js  doxygen-awesome.css  groups.dox
doc/architecture/: Astarte-MQTT-client-architecture.md  Astarte-device-architecture.md  Astarte-key-value-storage.md  astarte_device.md  astarte_mqtt_client.md
e2e/: CERTIFICATE  CMakeLists.txt  Kconfig  README.md  certificate.cmake  hwmap.yaml  prj.conf  testcase.yaml
e2e/boards/: native_sim.conf  qemu_x86.conf  stm32h573i_dk.conf  stm32h573i_dk.overlay
e2e/include/: data.h  device_handler.h  e2edata.h  e2erunner.h  e2eutilities.h  idata.h  individual_test.h  object_test.h  property_test.h  runner.h  shell_handlers.h  shell_macros.h  utilities.h
e2e/interfaces/: generated_interfaces.c  generated_interfaces.h  org.astarte-platform.zephyr.e2etest.DeviceAggregate.json  org.astarte-platform.zephyr.e2etest.DeviceDatastream.json  org.astarte-platform.zephyr.e2etest.DeviceProperty.json  org.astarte-platform.zephyr.e2etest.ServerAggregate.json  org.astarte-platform.zephyr.e2etest.ServerDatastream.json  org.astarte-platform.zephyr.e2etest.ServerProperty.json
e2e/pytest/: cfgvalues.py  configuration.py  conftest.py  data.py  http_requests.py  interface_data.py  interface_data_aggregate.py  interface_data_datastream.py  interface_data_property.py  interface_testing.py  interface_testing_datastream.py  interface_testing_property.py  pyproject.toml  requirements.txt  test_e2e.py  test_utilities.py
e2e/src/: data.c  device_handler.c  e2erunner.c  e2eutilities.c  idata.c  individual_test.c  main.c  object_test.c  property_test.c  runner.c  shell_handlers.c  utilities.c
heap_statistics/: heaps_stats.py  split_file.py
include/astarte_device_sdk/: astarte.h  bson_deserializer.h  bson_serializer.h  bson_types.h  data.h  device.h  device_id.h  error.h  individual.h  interface.h  mapping.h  object.h  pairing.h  result.h  type.h  unit_testable_component.h  util.h  uuid.h  value.h
lib/: CMakeLists.txt  Kconfig
lib/astarte_device_sdk/: CMakeLists.txt  Kconfig  alloc.c  astarte_zlib.c  backoff.c  bson_deserializer.c  bson_serializer.c  crypto.c  data.c  data_deserialize.c  data_serialize.c  data_validation.c  device.c  device_caching.c  device_caching_core.c  device_caching_intro.c  device_caching_prop.c  device_caching_sync.c  device_checks.c  device_connection.c  device_id.c  device_rx.c  device_tx.c  error.c  generation.cmake  getaddrinfo.c  heap.c  http.c  individual.c  interface.c  introspection.c  kv_storage.c  kv_storage_nvs.c  mapping.c  mqtt.c  mqtt_caching.c  object.c  pairing.c  result.c  tls_credentials.c  (+5 more)
puncover_testing/: generated.mermaid  gui_puncover.py  my_puncover.py
samples/: README.md
samples/aggregates/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/aggregates/src/: main.c
samples/astarte_app/: CMakeLists.txt  Kconfig  README.md  README_NXP.md  prj-zephyr-msv.conf  prj.conf  sample.yaml  zephyr-lts.conf
samples/astarte_app/boards/: esp_wrover_kit_esp32_procpu.conf  frdm_mcxn947_mcxn947_cpu0.conf  frdm_rw612.conf  frdm_rw612.overlay  mimxrt1060_evkb.conf  mimxrt1064_evk.overlay  native_sim.conf  nrf7002dk_nrf5340_cpuapp.conf  stm32h573i_dk.conf
samples/astarte_app/include/: eth.h  individual_send.h  property_send.h  register.h  sample_config.h  utils.h  wifi.h
samples/astarte_app/interfaces/: generated_interfaces.c  generated_interfaces.h  org.astarteplatform.zephyr.examples.DeviceDatastream.json  org.astarteplatform.zephyr.examples.DeviceProperty.json  org.astarteplatform.zephyr.examples.ServerAggregate.json  org.astarteplatform.zephyr.examples.ServerProperty.json
samples/astarte_app/socs/: esp32s3_procpu.conf
samples/astarte_app/src/: config_file.c  eth.c  individual_send.c  main.c  nvs.c  object_send.c  property_send.c  register.c  utils.c  wifi.c
samples/common/: CommonComponents.cmake  CommonConfig.cmake  IncludeInterfaces.cmake  Kconfig  Utils.cmake  overlay-tls.conf  prj.conf
samples/datastreams/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/datastreams/boards/: esp_wrover_kit.conf
samples/datastreams/include/: esp-wrover-kit-tls-conf.h
samples/datastreams/interfaces/: org.astarteplatform.zephyr.examples.ServerDatastream.json
samples/datastreams/src/: main.c
samples/properties/: Kconfig  README.md  prj.conf  sample.yaml
samples/register/: Kconfig  README.md  overlay-tls.conf  prj.conf  sample.yaml
scripts/: .pylintrc  astarte-clean.py  astarte-docs.py  astarte-format.py  astarte-interfaces.py  astarte-static.py  clean.py  docs.py  format.py  generate_interfaces.py  private-west-commands.yml  requirements.txt  static.py  west-commands.yml
spdx/: app.spdx  modules-deps.spdx  zephyr.spdx
tests/lib/astarte_device_sdk/integration/device_caching/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/astarte_device_sdk/integration/device_caching/boards/: native_sim.overlay
tests/lib/astarte_device_sdk/integration/device_caching/src/: device_caching_test.c
tests/lib/astarte_device_sdk/integration/uuid/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/astarte_device_sdk/integration/uuid/src/: main.c
tests/lib/astarte_device_sdk/unit/data_serialize/: CMakeLists.txt  testcase.yaml
tests/lib/astarte_device_sdk/unit/data_serialize/src/: main.c
tests/lib/astarte_device_sdk/unit/individual/: CMakeLists.txt  testcase.yaml
tests/lib/astarte_device_sdk/unit/individual/src/: main.c
zephyr/: module.yml
(+207 files in other folders)
